# Python4DataScience-de

./: .gitignore  .pre-commit-config.yaml  .pyup.yml  .vale.ini  CHANGELOG.rst  README.rst  pyproject.toml
.dvc/: .gitignore
.github/: dependabot.yml
.github/workflows/: docs.yml  pre-commit.yml  zizmor.yml
docs/: 404.rst  Makefile  conf.py  constraints.txt  genindex.rst  index.rst  intro.rst  make.bat  requirements.txt
docs/clean-prep/: bulwark.ipynb  dask-pipeline.ipynb  deduplicate.ipynb  hypothesis.ipynb  index.rst  nulls.ipynb  outliers.ipynb  scikit-learn-reprocessing.ipynb  string-matching.ipynb  tdda.ipynb  voluptuous.ipynb
docs/data-processing/: file-systems.rst  geodata.rst  glossary.rst  index.rst  opendata.rst  pandas-io.rst  remote-file-systems.rst
docs/data-processing/apis/: index.rst
docs/data-processing/apis/fastapi/: example.rst  extensions.rst  index.rst  install.rst
docs/data-processing/apis/grpc/: accounts_pb2.py  accounts_server.py  example.rst  (+2 more)
docs/data-processing/httpx/: index.rst  install-example.ipynb  module.ipynb
docs/data-processing/intake/: data-engineers.ipynb  data-scientists.ipynb  index.rst  install.rst
docs/data-processing/nosql/: column-oriented-db.rst  document-oriented-db.rst  graph-db.rst  index.rst  key-value-store.rst  object-db.rst  xml-db.rst
docs/data-processing/postgresql/: alembic.rst  db-api.rst  fdw.rst  index.rst  ipython-sql.rst  orm.rst  performance.rst  pganalyze.rst  pgmonitor.rst  plang.rst  psycopg2.rst  sec.rst  sqlalchemy.rst
docs/data-processing/requests/: index.rst  module.ipynb  requests.ipynb
docs/data-processing/serialisation-formats/: excel.ipynb  index.rst  others.rst  protobuf.rst  pyproject.toml  serialisation.ipynb
docs/performance/: asyncio-example.ipynb  cy_kmeans.pyx  dask.ipynb  ds_kmeans.py  index.rst  ipython-profiler.ipynb  memray.rst  multiprocessing-threading-async.rst  multiprocessing.ipynb  nb_kmeans.py  np_kmeans.py  parallelise-pandas.rst  perflint.rst  py_kmeans.py  scalene.ipynb  sp_kmeans.py  tachyon.rst  threading-example.ipynb  threading-forking-combined.ipynb  tprof.rst  tracing.rst
docs/productive/: documenting.rst  index.rst  licensing.rst  logging.rst  packaging.rst  security.rst  testing.rst
docs/productive/cite/: data.rst  hermes.toml  index.rst  journals.rst  software.rst
docs/productive/dvc/: dag.rst  data.rst  experiments.rst  fds.rst  index.rst  init.rst  integration.rst  metrics.rst  params.rst  pipeline.rst  reproduce.rst
docs/productive/envs/: index.rst
docs/productive/git/: advanced.rst  best-practices.rst  branch.rst  cherry-pick.rst  etckeeper.rst  exceltocsv.py  glossary.rst  index.rst  install-config.rst  log.rst  rebase.rst  revert.rst  review.rst  tag.rst  undo.rst  work.rst  working-areas.rst
docs/productive/logging/: development.ini  index.rst
docs/productive/qa/: anti-patterns.rst  black.rst  code-smells.rst  flake8.rst  index.rst  isort.rst  manifest.rst  mypy.rst  prettier.rst  pyre.rst  pysa.rst  pystra.rst  pytype.rst  rope.ipynb  ruff.rst  wily.rst
docs/productive/security/: index.rst  sbom.rst
docs/viz/: index.rst
docs/web/: index.rst
docs/workspace/: index.rst  jupyter.rst
docs/workspace/ipython/: debugging.ipynb  display.ipynb  examples.ipynb  extensions.rst  importing.ipynb  index.rst  magics.ipynb  myscript.py  shell.ipynb  start.rst
docs/workspace/numpy/: arithmetic.ipynb  bool.ipynb  dtype.ipynb  file.ipynb  index.rst  indexing-slicing.ipynb  intro.ipynb  ndarray.ipynb  sort.ipynb  statistics.ipynb  transpose.ipynb  ufunc.ipynb  unique.ipynb  vectorisation.ipynb  where.ipynb
docs/workspace/pandas/: aggregation.ipynb  apply.ipynb  arithmetic.ipynb  combining-merging.ipynb  convert-dtypes.ipynb  data-structures.ipynb  date-time.ipynb  discretisation.ipynb  group-operations.ipynb  index.rst  indexing.ipynb  pivoting-crosstab.ipynb  python-data-structures.ipynb  select-filter.ipynb  sorting-ranking.ipynb  string-manipulation.ipynb  transforming.ipynb
fastapi/: main.py
(+118 files in other folders)
